--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "angular-vertilize": "~1.0.1",
     "bootstrap": "~3.3.5",
     "angular-bootstrap": "^1.3.2"
+  },
+  "resolutions": {
+    "angular": ">=1.4.0"
   }
 }
